src/objects/Device__c.object
<CustomObject>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>Ajar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P08.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM 5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM 6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM 6.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM 7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM 6.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Orderable_in_Tigers__c</fullName>
        <inlineHelpText>Is this product in the Tigers Catalog? If it does not exist in the catalog, please mark it as No and order it via a &quot;Non-Catalog&quot; Order in Tigers?</inlineHelpText>
        <label>Orderable in Tigers?</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Google_TA_Submission_Date__c</fullName>
        <inlineHelpText>This field shows the very first date entered in the field: CTS_SW_Checklist_Sent_to_Google so we can reference it when trying to determine total approval time</inlineHelpText>
        <label>Original Google TA Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Product_Class__c</fullName>
        <description>Mapped from NPI field &quot;Overall Product Class&quot;</description>
        <inlineHelpText>Mapped from NPI field &quot;Overall Product Class&quot;</inlineHelpText>
        <label>Overall Product Class</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PctAppsApproved_2__c</fullName>
        <description>This is an &quot;duplicate&quot; field, auto-populated by the Formula field &quot;% of apps&quot;... this allows us to track history, since we cannot track history on the original formula field... visible to ADMINS only</description>
        <inlineHelpText>This is an &quot;duplicate&quot; field, auto-populated by the Formula field &quot;% of apps&quot;... this allows us to track history, since we cannot track history on the original formula field... visible to ADMINS only</inlineHelpText>
        <label>PctAppsApproved_2</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_BOM_SD_Apps_w_Executed_Contract__c</fullName>
        <label>% of Apps on BOM/SD w Executed Contracts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>Mapped from NPI &quot;Operating System&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Operating System&quot; field</inlineHelpText>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EZX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREWery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM Pocket PC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Tier__c</fullName>
        <description>Mapped from NPI &quot;Price Tier&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Price Tier&quot; field</inlineHelpText>
        <label>Price Tier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_NPI__c</fullName>
        <description>From NPI field &quot;Priority&quot;</description>
        <inlineHelpText>From NPI field &quot;Priority&quot;</inlineHelpText>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>(Hidden field) - this is the device product family, from NPI.. this field is used for formulas, criteria checks, and API calls</description>
        <inlineHelpText>(Hidden field) - this is the device product family, from NPI.. this field is used for formulas, criteria checks, and API calls</inlineHelpText>
        <label>Product Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model_Number__c</fullName>
        <description>From NPI field &quot;Family Model Number&quot;</description>
        <inlineHelpText>From NPI field &quot;Family Model Number&quot;</inlineHelpText>
        <label>Product Model Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for creating relation between SWBOM device record and its inherited PMD Product record</description>
        <inlineHelpText>Used for creating relation between SWBOM device record and its inherited PMD Product record</inlineHelpText>
        <label>Product (PMD)</label>
        <referenceTo>PMD_Product__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Security_Classification__c</fullName>
        <description>Mapped to NPI field Disclosure Status, from GPPD</description>
        <inlineHelpText>Mapped to NPI field Disclosure Status, from GPPD</inlineHelpText>
        <label>Product Security Disclosure Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Segment__c</fullName>
        <description>From NPI, &quot;Product Segment&quot; field</description>
        <inlineHelpText>From NPI, &quot;Product Segment&quot; field</inlineHelpText>
        <label>Product Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Device status, based on data feed from NPI</description>
        <inlineHelpText>Device status, based on data feed from NPI</inlineHelpText>
        <label>Product Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Manager_Email__c</fullName>
        <description>Integrates via Informatic to NPI field PM_Email</description>
        <label>Program Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program_Manager_Name__c</fullName>
        <description>Integrates via Informatica to NPI field PM</description>
        <inlineHelpText>Program Manager, from NPI</inlineHelpText>
        <label>Program Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_PMD__c</fullName>
        <formula>Product_PMD__r.Project_ID__r.Program_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The related PROGRAM in PMD</inlineHelpText>
        <label>Program (PMD)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_PMD__c</fullName>
        <formula>Product_PMD__r.Project_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The related PROJECT in PMD</inlineHelpText>
        <label>Project (PMD)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Shipped_Volume__c</fullName>
        <label>Projected Shipped Volume</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Modem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this device have a QC modem?</description>
        <inlineHelpText>Does this device have a QC modem?</inlineHelpText>
        <label>QC Modem?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QC_modem_type__c</fullName>
        <label>QC modem type</label>
        <picklist>
            <picklistValues>
                <fullName>MSM7xxx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QSC60x5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6x00+OMAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6x00+AP20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6xxx (no OMAP nor AP20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QSC6xxx (no OMAP nor AP20)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QC_sw_royalties__c</fullName>
        <formula>IF(QC_Modem__c,
IF(ISPICKVAL(QC_modem_type__c, &quot;MSM7xxx&quot;), &quot;Android phone ... likely uses QCOM MMV &amp; Fluence&quot; &amp; BR(), &quot;&quot;) &amp;
IF(ISPICKVAL(QC_modem_type__c, &quot;QSC60x5&quot;), &quot;Android phone, but uses QCOM as modem-only, likely only using QCOM Fluence&quot; &amp; BR(), &quot;&quot;) &amp;
IF(ISPICKVAL(QC_modem_type__c, &quot;MDM6x00+OMAP&quot;), &quot;Android phone, but uses QCOM as modem-only, likely only using QCOM Fluence&quot; &amp; BR(), &quot;&quot;)&amp;
IF(ISPICKVAL(QC_modem_type__c, &quot;MDM6x00+AP20&quot;), &quot;Android phone, but uses QCOM as modem-only, likely only using QCOM Fluence&quot; &amp; BR(), &quot;&quot;)&amp;
IF(ISPICKVAL(QC_modem_type__c, &quot;MSM6xxx (no OMAP nor AP20)&quot;), &quot;not an Android phone ... possible QCOM SW use:&quot; &amp; BR() &amp;
    &quot;*CMX = audio codecs ... likely for all phones in this category&quot; &amp; BR() &amp;
    &quot;* MMV = video codecs ... likely for all phones in this category&quot; &amp; BR() &amp;
    &quot;* QBT = bluetooth codecs ... very limited use going forward&quot; &amp; BR() &amp;
    &quot;* Fluence = dual-mic noise cancellation ... use is steady, possibly increasing&quot; &amp; BR() &amp;
    &quot;* QVM = QCOM Java ... used only on some Sprint phones (very unlikely)&quot; &amp; BR(), &quot;&quot;) &amp;
IF(ISPICKVAL(QC_modem_type__c, &quot;QSC6xxx (no OMAP nor AP20)&quot;), &quot;not an Android phone ... possible QCOM SW use:&quot; &amp; BR() &amp;
    &quot;*CMX = audio codecs ... likely for all phones in this category&quot; &amp; BR() &amp;
    &quot;* MMV = video codecs ... likely for all phones in this category&quot; &amp; BR() &amp;
    &quot;* QBT = bluetooth codecs ... very limited use going forward&quot; &amp; BR() &amp;
    &quot;* Fluence = dual-mic noise cancellation ... use is steady, possibly increasing&quot; &amp; BR() &amp;
    &quot;* QVM = QCOM Java ... used only on some Sprint phones (very unlikely)&quot; &amp; BR(), &quot;&quot;), &quot;Not a QC modem, no QC royalties&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC sw royalties</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code_Date__c</fullName>
        <label>Reason Code Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Last_Respin__c</fullName>
        <description>Who is driving this re spin/re submission?</description>
        <inlineHelpText>Who is driving this re spin?</inlineHelpText>
        <label>Reason for Last Respin</label>
        <picklist>
            <picklistValues>
                <fullName>Google Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>From NPI; hidden field</description>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_PM_Email__c</fullName>
        <description>Regional PM Email, from NPI</description>
        <inlineHelpText>Regional PM Email, from NPI</inlineHelpText>
        <label>Regional PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Regional_PM__c</fullName>
        <description>Regional PM, from NPI</description>
        <inlineHelpText>Regional PM, from NPI</inlineHelpText>
        <label>Regional PM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regression_Actual_Date__c</fullName>
        <description>From NPI field &quot;Regression_Actual_Date&quot;</description>
        <inlineHelpText>From NPI field &quot;Regression_Actual_Date&quot;</inlineHelpText>
        <label>Regression Actual Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Regression_CWV_Date__c</fullName>
        <description>From NPI field &quot;Regression_CWV_Date&quot;</description>
        <inlineHelpText>From NPI field &quot;Regression_CWV_Date&quot;</inlineHelpText>
        <label>Regression CWV Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_Date_for_Google_TA__c</fullName>
        <description>Field for Google TA ranking tool</description>
        <label>Requested Date for Google TA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Respin__c</fullName>
        <description>Yes or No field answering whether it is a re submission for Google TA</description>
        <inlineHelpText>If this is a respin please choose Yes if not please choose No</inlineHelpText>
        <label>Respin?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Date__c</fullName>
        <description>Mapped from NPI &quot;Current Plan of Record SA Date&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Current Plan of Record SA Date&quot; field</inlineHelpText>
        <label>SA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SA_Release_Type__c</fullName>
        <description>Mapped from NPI field &quot;SA Release Type&quot; -- identifies whether a device is an initial launch, or is an MOL</description>
        <inlineHelpText>Mapped from NPI field &quot;SA Release Type&quot; -- identifies whether a device is an initial launch, or is an MOL</inlineHelpText>
        <label>Launch Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Status__c</fullName>
        <description>Device SA Status, based on NPI</description>
        <inlineHelpText>Device SA Status, based on NPI</inlineHelpText>
        <label>Device SA Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWBOM_Owner_Email__c</fullName>
        <description>SWBOM Owner email, from NPI</description>
        <inlineHelpText>SWBOM Owner email, from NPI</inlineHelpText>
        <label>SWBOM Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SWBOM_Owner__c</fullName>
        <description>SWBOM Owner, from NPI</description>
        <inlineHelpText>SWBOM Owner, from NPI</inlineHelpText>
        <label>SWBOM Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWBOM_Reviewed_and_Approved__c</fullName>
        <description>The SW BOM list of apps has been reviewed (scrubbed) and approved</description>
        <inlineHelpText>The SW BOM list of apps has been reviewed (scrubbed) and approved</inlineHelpText>
        <label>SW BOM Reviewed and Approved</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SW_Apps_Lead__c</fullName>
        <inlineHelpText>From NPI field &quot;Software &amp; Applications Lead&quot;</inlineHelpText>
        <label>Software &amp; Applications Lead (General)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_BOM_List_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who reviewed and approved the SW BOM</description>
        <inlineHelpText>The person who reviewed and approved the SW BOM.
If the name shows &quot;Automated DataFeed&quot;, that means this device is a legacy approval, prior to implementation of this SWBOM approval field.</inlineHelpText>
        <label>SW BOM List Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Devices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_BOM_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by Device Automated Emails</description>
        <inlineHelpText>Used by Device Automated Emails</inlineHelpText>
        <label>SW BOM Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_SWBOM_Owner_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Eng_Lead__c</fullName>
        <inlineHelpText>From NPI</inlineHelpText>
        <label>Software Engineering Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Integration_Lead_Email__c</fullName>
        <description>SW Integration Lead email, from NPI</description>
        <inlineHelpText>Product Integration Lead email, from NPI</inlineHelpText>
        <label>Product Integration Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SW_Integration_Lead__c</fullName>
        <description>SW Integration Lead, from NPI</description>
        <inlineHelpText>SW Integration Lead, from NPI</inlineHelpText>
        <label>Product Integration Lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_KIT_Creation_Date__c</fullName>
        <formula>SW_Kit__r.CreatedDate</formula>
        <inlineHelpText>The Date this SW KIT was created in MOTOPDM.</inlineHelpText>
        <label>SW KIT Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SW_Kit_Effective_Date__c</fullName>
        <formula>SW_Kit__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SW Kit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SW_Kit_Item_State__c</fullName>
        <formula>SW_Kit__r.SW_Kit_Item_State__c</formula>
        <inlineHelpText>SW KIT State is pulled in from MOTOPDM</inlineHelpText>
        <label>SW Kit Item State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Kit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Kit</label>
        <referenceTo>SW_Kit__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Release__c</fullName>
        <description>From NPI field &quot;SW_Release&quot;</description>
        <inlineHelpText>From NPI field &quot;SW_Release&quot;</inlineHelpText>
        <label>SW Release</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesModelCount__c</fullName>
        <label>SalesModelCount</label>
        <summaryForeignKey>SalesModel_Device__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Model_List_Concatenated__c</fullName>
        <label>Sales Model List Concatenated</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipped_and_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on NPI Device Status</description>
        <inlineHelpText>Based on NPI Device Status</inlineHelpText>
        <label>Device Shipped and Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Budget_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Budget Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_Engineering_Lead_Email__c</fullName>
        <description>Integrates via Informatic to NPI field SW_Eng_Lead_Email</description>
        <label>Software Engineering Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Software_Features__c</fullName>
        <description>From NPI field &quot;SoftwareFeatures&quot;</description>
        <inlineHelpText>From NPI field &quot;SoftwareFeatures&quot;</inlineHelpText>
        <label>Software Features</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Lockdown_Actual_Date__c</fullName>
        <description>From NPI field &quot;Software_Lockdown_Actual_Date&quot;</description>
        <inlineHelpText>From NPI field &quot;Software_Lockdown_Actual_Date&quot;</inlineHelpText>
        <label>SW Lockdown Actual Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Software_Lockdown_CWV_Date__c</fullName>
        <description>From NPI field &quot;Software_Lockdown_CWV_Date&quot;</description>
        <inlineHelpText>From NPI field &quot;Software_Lockdown_CWV_Date&quot;</inlineHelpText>
        <label>SW Lockdown CWV Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Software_and_Applications_Lead_Email__c</fullName>
        <description>Integrates via Informatic to NPI field SW_APP_Lead_Email</description>
        <label>Software and Applications Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StableName__c</fullName>
        <formula>Stable__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stable_Line__c</fullName>
        <description>From NPI &quot;Stable Line&quot;</description>
        <inlineHelpText>From NPI &quot;Stable Line&quot;</inlineHelpText>
        <label>Stable Line</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Stable selected for this Device. To change use the Edit Core &amp; Stable button.</inlineHelpText>
        <label>Stable</label>
        <referenceTo>Stable__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <description>Product Family ship status, based on data feed from NPI</description>
        <formula>IF(Product__c = &quot;Canceled&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000Vl60&quot;, &quot;Red&quot;),
IF(Product__c = &quot;Shipping&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000Vl6A&quot;, &quot;Green&quot;),
IF(Product__c = &quot;Active&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000Vl65&quot;, &quot;White&quot;),
IF(Product__c = &quot;Planning&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000Vl65&quot;, &quot;White&quot;),
          &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Family ship status, based on data feed from NPI

&quot;Shippable&quot; = Earliest device in Product Family is past SA date

&quot;Active&quot; = Product Family active, and currently being worked on

&quot;Cancelled&quot; = Product Family has been cancelled</inlineHelpText>
        <label>Product Family Ship Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Completion_Time__c</fullName>
        <description>Field showing the number of days it took to complete the Google TA process</description>
        <formula>Date_of_Google_TA_Approval_by_Google__c  -   Original_Google_TA_Submission_Date__c</formula>
        <inlineHelpText>Shows the number of days it took to complete the Google TA process</inlineHelpText>
        <label>Submission Completion Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Version__c</fullName>
        <description>From NPI field &quot;System_Version&quot;</description>
        <inlineHelpText>From NPI field &quot;System_Version&quot;</inlineHelpText>
        <label>System Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Date__c</fullName>
        <description>Technical Acceptance Date</description>
        <inlineHelpText>Mapped from NPI &quot;TA CWV Date&quot;</inlineHelpText>
        <label>TA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TOTAL_of_APPS__c</fullName>
        <description>Total number of Apps related to this Device</description>
        <inlineHelpText>Total number of Apps related to this Device</inlineHelpText>
        <label>Total Number of Apps on Device</label>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Target_FTRR_Date__c</fullName>
        <label>Target FTRR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_STRR_Date__c</fullName>
        <label>Target STRR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Description__c</fullName>
        <description>Mapped from NPI &quot;Tech Description&quot; field</description>
        <inlineHelpText>Mapped from NPI &quot;Tech Description&quot; field</inlineHelpText>
        <label>Tech Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>&quot;Product Group&quot; field in NPI</description>
        <inlineHelpText>&quot;Product Group&quot; field in NPI</inlineHelpText>
        <label>NPI Product Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tigers_Cost__c</fullName>
        <inlineHelpText>Cost of device in Tigers for internal orders</inlineHelpText>
        <label>Tigers Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tigers_Part__c</fullName>
        <inlineHelpText>Part # referenced in Tigers when placing an Order</inlineHelpText>
        <label>Tigers Part #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Approved_Apps__c</fullName>
        <description>Number of Apps AIF-Approved on Device</description>
        <inlineHelpText>Number of Apps AIF-Approved on Device</inlineHelpText>
        <label>Approved Apps on Device</label>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Agent_UA_String__c</fullName>
        <description>UA string identifies the device to web sites and other servers.  Servers use the UA string to characterize the device and select suitable content and operating parameters for the session.  For example, a web server uses the UA string to format a web page for the screen size of the particular device.</description>
        <inlineHelpText>Identifies the device to web sites and other servers.  Servers use this to characterize the device and select suitable content and parameters for the session; ie.a web server uses this string to format a webpage for the screen size of a particular device</inlineHelpText>
        <label>User Agent (UA) String</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Interface_User_Experience_Lead__c</fullName>
        <inlineHelpText>From NPI</inlineHelpText>
        <label>User Interface &amp; User Experience Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOIP_Support__c</fullName>
        <description>From NPI field, &quot;VOIP Support&quot;</description>
        <inlineHelpText>From NPI field, &quot;VOIP Support&quot;</inlineHelpText>
        <label>VOIP Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Encode_Codecs__c</fullName>
        <description>From NPI field &quot;Video Encode Codecs&quot;</description>
        <inlineHelpText>From NPI field &quot;Video Encode Codecs&quot;</inlineHelpText>
        <label>Video Encode Codecs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Playback_Codecs__c</fullName>
        <description>From NPI field &quot;Video Playback Codecs&quot;</description>
        <inlineHelpText>From NPI field &quot;Video Playback Codecs&quot;</inlineHelpText>
        <label>Video Playback Codecs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>White_Listed_Build_Fingerprint__c</fullName>
        <description>The White Listed Build Fingerprint unique ID provided by Google after official Technical Acceptance.</description>
        <inlineHelpText>The White Listed Build Fingerprint unique ID provided by Google after official Technical Acceptance.</inlineHelpText>
        <label>White Listed Build Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wireless__c</fullName>
        <formula>and(not(isnull(Product_PMD__r.Wireless_Technology__c )),Business_Unit__c =&quot;Mobile Devices&quot;)</formula>
        <label>Wireless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Apps_Approved_by_3rd_Party__c</fullName>
        <label>3rd Party Apps Approved by 3rd Party</label>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.X3rd_Party_Approval_Required__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.X3rd_Party_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_SW_Integration_Lead__c</fullName>
        <description>For MotoReady Contact Information purposes</description>
        <inlineHelpText>For MotoReady Contact Information purposes</inlineHelpText>
        <label>3rd Party SW Integration Lead</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>